public/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Poppins:wght@400;700&family=Righteous&display=swap');

/* resets */
    * {
        box-sizing: border-box;
        margin: 0;
        padding: 0;
    }

/* presets */
    .left {
        text-align: left;
    }
    .center {
        text-align: center;
    }
    .right {
        text-align: right;
    }
    .flex {
        display: flex;
    }
    .padding-bottom {
        padding-bottom: 5rem;
    }
    .padding-top {
        padding-top: 5rem;
    }
    .full-width {
        width: 100%;
    }
    .full-height {
        height: 100%;
    }
    b {
        font-weight: 700;
        color: var(--clr-passed);
    }
    

/* set 1rem = 10px */
    html {
        font-size: 62.5%;
    }

/* CUSTOM PROPERTIES */
    :root {
        --ff-header: 'Quicksand', sans-serif;
        --ff-content: 'Quicksand', sans-serif;
        --fw-bold: 700;
        --clr-lightest: #fff;
        --clr-light: #efefef;
        --clr-med: #5B7D9C;
        --clr-darkest:#1C3752;
        --clr-passed: #005A5B;
        --clr-failed: #8E0C11;
        --fs-h1: 5rem;
        --fs-h2: 4rem;
        --fs-h3: 3rem;
        --fs-body: 2rem;
        --fs-copyright: 2.5rem;
        --fs-default: 1rem;
    }
    p {
        font-size: var(--fs-body);
    }
    body {
        position: relative;
        width: 100%;
        color: var(--clr-darkest);
        font-family: var(--ff-content);
        font-size: var(--fs-body);
        background: var(--clr-light);
        margin: 10rem auto;
        max-width: 700px;
    }

    .body-container,
    #result-super-container,
    #result-heading,
    #result-page-container {
        
        margin: 0 auto;
        width: 100%;
    }

    .result-super-container {
        background-color: var(--clr-lightest);
        padding: 5rem 5rem 1rem 5rem;
        border-radius: 5rem;
        text-align: center;
    }

    .body-side-padding {
        flex-grow: 1;
        background: lightblue;
    }

    .body-main-container {
        width: 100%;
        background: var(--clr-light);
        padding: 5rem 3rem;
        box-shadow: 2px 2px 2px 1px rgba(128, 128, 128, .5);
    }

/* LOGO */
    .logo {
        width: 13rem;

    }

/* ---- HIGH SCORES ----*/

    a, a:hover {
        transition: .3s ease-in-out;
    }
    i.fa-trophy {
        font-size: 5rem;
    }
    
    .high-score-container {
        max-width: 400px;
    }
    table.display-high-scores tr:first-child {
        background-color: var(--clr-darkest);
        font-weight: 700;
        color: #fff;
    }
    table.display-high-scores tr:nth-child(2) {
        background-color: gold;
        font-weight: 700;
    }
    table.display-high-scores tr:nth-child(3) {
        background-color: silver;
        font-weight: 700;
    }   
    table.display-high-scores tr:nth-child(4) {
        background-color: #CD7F32;
        font-weight: 700;
    }

    .highscores {
        position: absolute;
        top: 1rem;
        left: 1rem;
    }
 
/* FORM */
input[type=name] {
  padding: 1rem;
  border: none;

  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
  margin-right:1rem;
}

/* ---- HEADER ---- */
    header {
        margin-top: 5rem;
        width: 100%;
        margin-bottom: 10rem;
        font-family: var(--ff-header);
        font-weight: var(--fw-bold);
        font-size: var(--fs-h1);
        text-transform: uppercase;
        color: var(--clr-med);
        justify-content: center;
        align-items: center;
        gap: 2rem;
        font-family: 'Righteous', Arial, Helvetica, sans-serif;
    }

    header img {
    width: 80%;
    }
    .logo-font {
        font-size: 5rem;
    }

    header > * {
        flex-wrap: wrap;
    }

    .heading {
        text-align: left;
        padding-bottom: 5rem;
        font-size: var(--fs-h3);
    }

    header p {
        text-align: left;
        display: inline;
        width: min-content;
    }

/* ---- RESULT ---- */
    #result-page-container {
        width: 100%;
        margin: 5rem auto; 
        flex-wrap: wrap;
    }

    #result-page {
        width: 50%;
    }

    .result-heading {
        padding-bottom: 5rem;
    }
    .result-label {
        font-size: 1.6rem;
    }
    .accuracy {
        font-weight: var(--fw-bold);
    }

    span#percent {
        font-weight: var(--fw-bold);
        font-size: var(--fs-h3);
    }

/* ---- MAIN ---- */
    .bg-opacity {
        content: '';
        float: left;
        background-image: url('../img/bg.jpg');
        width: 100%;
        height: 100%;
        position: fixed;
        background-position: center;
        top: 0;
        left: 0;
        z-index: -1;
        background-size: cover;
        opacity: .3;
        
    }
    
    main {
        justify-content: center;
        flex-wrap: wrap;
        gap: var(--fs-body);
        margin-bottom: 5rem;
    }


    /* default size for color square divs */
    main > div {
        width: 30rem;
        height: 30rem;
        align-items: center;
        border-radius: var(--fs-body);
    }
    /* container for hex and rgb vals */
    #random-result,
    #guessed-result {
        width: 80%;
        margin: auto;
        background: rgba(255, 255, 255, .75);
        border-radius: var(--fs-default);
    }
    /* font size for label and color value */
    .value-line {
        font-size: var(--fs-body);
        padding: var(--fs-default);
    }
    /* add padding betwen label and val */
    .value-line label {
        padding-right: var(--fs-default);
    }

    /* default bg for guess square */
    #guessed-color {
        background: #000;
    }

    .result-page {
        display: flex;
    }

/* SLIDERS */
    .rgb-sliders {
        padding: var(--fs-body);
        max-width: 500px;
        margin: 0 auto;
    }

    .rgb-sliders > div {
        margin-bottom: 2rem;
    }

    .rgb-sliders > * {
        padding: var(--fs-default);
    }
    
    .rgb-sliders label {
        font-size: var(--fs-body);
        padding-right: var(--fs-default);
    }
    
    .rgb-sliders input {
        flex-grow: 1;
    }


/* BUTTONS */
    .btn-container {
        justify-content: center;
        gap: var(--fs-default);
    }

    button {
        font-family: var(--ff-content);
		border-radius: .5rem;
		outline: 1px solid var(--clr-med);
		/* box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5); */
		display: inline-block;
		letter-spacing: 0.125em;
		line-height: var(--fs-h3);
		padding: 1rem;
		text-align: center;
		text-decoration: none;
		white-space: nowrap;
	}

	input[type="submit"]:active,
	input[type="reset"]:active,
	input[type="button"]:active,
	button:active,
	.button:active {
	background-color: rgba(144, 144, 144, 0.2);
	}

    #submit-guess {
        background-color: var(--clr-passed); /* Green */
        
    }
    #reset {
        background-color: var(--clr-failed);

    }
    #submit-guess,
    #reset {
        cursor: pointer;
        padding: 1rem 1.3rem;
        font-size: var(--fs-body);
        text-align: center;
        text-decoration: none;
        color: #fff;
        transition: .1s ease-in-out;
        border: 1px solid var(--clr-lightest);
    }
    #submit-guess:hover,
    #reset:hover {
        opacity: .8;
        transition: .1s ease-in-out;
    }

/* FOOTER */
    footer {
        justify-content: space-between;
        align-items: flex-end;
        font-size: var(--fs-copyright);
        right: var(--fs-default);
        bottom: 0;
    }

    footer .giphy img {
        height: 2rem;
    }

    a,
    a:visited {
        color: var(--clr-passed);
        text-decoration: none;
    }
    a:hover {
        color: var(--clr-failed)
    }

/* MEDIA QUERIES */
 
 @media (min-width: 650px) and (max-width: 799px) {
    main > div {
        width: 25rem;
    }
 }

@media screen and (max-width: 649px) {
    .result-sub {
        flex-wrap: wrap;
    }
    
    #giphy-container,
    #result-container {
        width: 100%;
    }
}

@media (min-width: 543px) and (max-width: 590px) {
    :root {
        --fs-h1: 3.5rem;
        --fs-h3: 2.8rem;
    }
}

@media screen and (max-width: 542px) {
    html {
        font-size: 52%;
    }
    :root {
        --fs-h1: 4rem;
        --fs-h2: 3rem;
        --fs-h3: 2.5rem;
    }
    body {
        width: 95vw;
    }
    main > div {
        height: 24rem;
    }
    .logo {
        width: 8rem;
    }
    header {
        margin-bottom: 4rem;
    }
    .body-main-container {
        width: 95%;
    }
    .logo-font {
    font-size: 3.5rem;
    }
    #result-page-container {
        flex-grow: 1;
    }
        #result-page {
        width: 100%;
    }
    .value-line {
        display: block;
        width: 100%;
    }
    label.random-rgb,
    label.guessed-rgb,
    span.random-rgb,
    span.guessed-rgb {
        display: block;
        white-space: no-wrap;
    }
}

@media screen and (max-width: 320px) {
    html {
        font-size: 42%;
    }
    :root {
        --fs-h1: 3rem;
    }
    body {
        width: 100vw;
    }
    main > div {
        height: 20rem;
    }
    .logo-font {
        font-size: 2.5rem;
    }
    .logo {
        width: 8rem;
    }
    .padding-bottom {
        padding-bottom: 2rem;
    }
    header {
        margin-bottom: 4rem;
    }
}

